[project]
name = "quora-duplicate-question-pairs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "distance>=0.1.3",
    "fuzzywuzzy>=0.18.0",
    "helper>=2.5.0",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "xgboost>=3.0.5",
]
